--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
       <!-- search bar-->
       <div class="search-container">
         <input type="text" id="searchInput" placeholder="Enter your search term">
-        <button id="search" onclick="">Search</button>
+        <a href="search.html" id="search" class="button">
+          Search
+        </a>
       </div>
-      <!-- Login BTN--> 
+      <!-- Login BTN-->
       <!-- <a href="#" class="login"> LogIn</a> -->
     </div>
   </header>
