--- a/search.html
+++ b/search.html
@@ -24,7 +24,9 @@
             <!-- search bar-->
             <div class="search-container">
                 <input type="text" id="searchInput" placeholder="Enter your search term">
-                <button onclick="searchNews()">Search</button>
+                <a href="search.html" id="search" class="button">
+                    Search
+                </a>
             </div>
             <!-- Login BTN-->
             <!-- <a href="#" class="login"> LogIn</a> -->
@@ -34,7 +36,7 @@
         <div class="home-text container">
             <h2 class="home-title">The BuzzByte Blog</h2>
 
-            <span class="home-subtitle">Total Search Results: <span id="resultCount">500</span>
+            <span class="home-subtitle">Total Search Results: <span id="resultCount"></span>
         </div>
 
     </section>
